# chord

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md  codecov.yml
.agents/rules/: dsp_architect.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  main-arm-clang.yml  main-x86-clang.yml  main-x86-gcc.yml  pr-arm.yml
cmake/: chordConfig.cmake.in
examples/: CMakeLists.txt  plot_pulse.cpp  run_examples.sh
include/chord/demod/: fm.hpp
include/chord/dsp/: dc_remove.hpp  fractional_delay.hpp  freq_shift.hpp  freq_shift.tpp  mix.hpp  nco.hpp  pulse_design.hpp  resample.hpp  spectrum.hpp
include/chord/error/: status.h
include/chord/math/: complex.hpp  correlation.hpp  math_helpers.hpp  mul_vec_w_offset_conj.hpp  mul_vec_w_offset_conj.tpp  phase.hpp  stats.hpp  zero_cross.hpp
src/: CMakeLists.txt
src/demod/: fm.cpp
src/dsp/: dc_remove.cpp  fractional_delay.cpp  mix.cpp  nco.cpp  pulse_design.cpp  resample.cpp  spectrum.cpp
src/math/: complex.cpp  correlation.cpp  math_helpers.cpp  phase.cpp  stats.cpp  zero_cross.cpp
tests/: CMakeLists.txt
tests/data/: README.md
tests/demod/: test_fm.cpp
tests/dsp/: pulse_design_tests.cpp  spectrum_tests.cpp  test_dc_remove.cpp  test_fractional_delay.cpp  test_mix.cpp  test_nco.cpp  test_pulse_design.cpp  test_resample.cpp  test_spectrum.cpp
tests/math/: correlation_tests.cpp  test_complex.cpp  test_correlation.cpp  test_math_helpers.cpp  test_phase.cpp  test_stats.cpp  test_zero_cross.cpp
